--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-    mappings channel: 'official', version: '1.18.2'
+    mappings channel: 'official', version: '1.18.1'
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
     runs {
@@ -73,13 +73,19 @@ repositories {
     maven {
         url "https://cursemaven.com"
     }
+    maven {
+        name = "blamejared maven"
+        url = "https://maven.blamejared.com/"
+    }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.18.2-40.0.46'
+    minecraft 'net.minecraftforge:forge:1.18.1-39.0.10'
 
-    implementation fg.deobf("curse.maven:iceberg-520110:3675774")
-    implementation fg.deobf("curse.maven:itemframes-532127:3675785")
+    //implementation fg.deobf("curse.maven:iceberg-520110:3675774")
+    //implementation fg.deobf("curse.maven:itemframes-532127:3675785")
+    implementation fg.deobf("se.mickelus.mutil:mutil:1.18.1-4.5.0-pre.1")
+    implementation fg.deobf("se.mickelus.tetra:tetra:1.18.1-4.8.1")
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
