--- a/build.gradle
+++ b/build.gradle
@@ -86,8 +86,10 @@ repositories {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.18.1-39.0.10'
 
-    //implementation fg.deobf("curse.maven:iceberg-520110:3675774")
-    //implementation fg.deobf("curse.maven:itemframes-532127:3675785")
+    //implementation fg.deobf("curse.maven:iceberg-520110:3675774") 1.18.2
+    //implementation fg.deobf("curse.maven:itemframes-532127:3675785") 1.18.2
+    implementation fg.deobf("curse.maven:iceberg-520110:3632396")
+    implementation fg.deobf("curse.maven:legendarytt-532127:3653194")
     implementation fg.deobf("se.mickelus.mutil:mutil:1.18.1-4.5.0-pre.1")
     implementation fg.deobf("se.mickelus.tetra:tetra:1.18.1-4.8.1")
     implementation fg.deobf("mezz.jei:jei-1.18.1:9.4.1.112")
