--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -28,4 +28,9 @@ public-f net.minecraft.world.entity.ai.attributes.Attributes f_22278_ # KNOCKBAC
 public net.minecraft.world.entity.LivingEntity m_6472_(Lnet/minecraft/world/damagesource/DamageSource;F)V # hurtArmor
 public net.minecraft.world.entity.player.Player m_6472_(Lnet/minecraft/world/damagesource/DamageSource;F)V # hurtArmor
 public net.minecraft.world.entity.Entity m_5834_()V # markHurt
-
+protected-f net.minecraft.world.item.SwordItem f_43267_ # defaultModifiers
+protected-f net.minecraft.world.item.DiggerItem f_40982_ # defaultModifiers
+protected net.minecraft.world.item.SwordItem f_43266_ # attackDamage
+protected net.minecraft.world.item.DiggerItem f_40981_ # attackDamageBaseline
+protected-f net.minecraft.world.item.ArmorItem f_40383_ # defaultModifiers
+public net.minecraft.world.entity.monster.Creeper f_32274_ # DATA_IS_POWERED
