--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7.+', changing: true
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
@@ -108,6 +108,7 @@ dependencies {
 
 mixin {
     add sourceSets.main, "idf.mixin-refmap.json"
+    config 'idf.mixin.json'
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
