--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -28,3 +28,15 @@ Because Minecraft's damage system is a little boring
     versionRange="[1.19, 1.20)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.idf]]
+    modId="legendarytooltips"
+    mandatory = false
+    versionRange="[1.3,)"
+    ordering="BEFORE"
+    side="CLIENT"
+[[dependencies.idf]]
+    modId="patchouli"
+    mandatory = false
+    versionRange="[1.19-75,)"
+    ordering="BEFORE"
+    side="BOTH"
