--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -34,3 +34,9 @@ Because Minecraft's damage system is a little boring
     versionRange="[1.19-75,)"
     ordering="BEFORE"
     side="BOTH"
+[[dependencies.idf]]
+    modId="legendarytooltips"
+    mandatory = false
+    versionRange="[1.3.1,)"
+    ordering="BEFORE"
+    side="BOTH"
