--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,10 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+    def gpr_creds = {
+        username = property('gpr.username')
+        password = property('gpr.token')
+    }
     maven {
         url "https://cursemaven.com"
     }
@@ -83,20 +87,55 @@ repositories {
     maven {
         url = "https://maven.theillusivec4.top/"
     }
+    maven {
+        url = uri("https://maven.pkg.github.com/silentchaos512/silent-gear")
+        credentials gpr_creds
+    }
+    maven {
+        url = uri("https://maven.pkg.github.com/silentchaos512/silentlib")
+        credentials gpr_creds
+    }
+    maven {
+        url = uri("https://maven.pkg.github.com/silentchaos512/silent-utils")
+        credentials gpr_creds
+    }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.19.2-43.2.3'
-    implementation fg.deobf("curse.maven:iceberg-520110:4068355") //1.19
-    implementation fg.deobf("curse.maven:itemframes-532127:4068347") //1.19
+
+    //LEGENDARY TOOLTIPS + DEPENDENCIES
+    implementation fg.deobf("curse.maven:iceberg-520110:4068355")
+    implementation fg.deobf("curse.maven:itemframes-532127:4068347")
     implementation fg.deobf("curse.maven:prism-638111:3993293")
+
+    //UPDATE TETRA MICK I BEG U BRO
     //implementation fg.deobf("se.mickelus.mutil:mutil:1.18.2-4.5.0")
     //implementation fg.deobf("se.mickelus.tetra:tetra:1.18.2-4.9.2")
+
+    //SILENTGEAR + SILENTLIB
+    //implementation fg.deobf("curse.maven:silentgear-297039:4285448")
+    //implementation fg.deobf("curse.maven:silentlib-242998:3968715")
+    implementation fg.deobf("net.silentchaos512:silent-gear:4285448") {
+        exclude module: 'forge'
+        exclude module: 'jei-1.18.2'
+        exclude module: 'silent-lib'
+        exclude module: 'curios-forge'
+    }
+
+    // Same as before, VERSION is in the form "MC_VERSION-MOD_VERSION" (eg, 1.18.2-6.+)
+    // https://github.com/SilentChaos512/silentlib/packages
+    implementation fg.deobf("net.silentchaos512:silent-lib:3968715") {
+        exclude module: "forge"
+    }
+
+    //STAPLES
     implementation fg.deobf("mezz.jei:jei-1.19.2-forge:11.3.0.262")
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0:api")
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-76:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-76")
+
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
