--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+gpr.username=chris-wjn
+gpr.token=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
