work on silentgear compat

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,6 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 gpr.username=chris-wjn
-gpr.token=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
+gpr.token=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
+sl_version=1.19.2-7.+
+sgear_version=1.19.2-3.+
