--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -32,11 +32,17 @@ Because Minecraft's damage system is a little boring
     modId="patchouli"
     mandatory = false
     versionRange="[1.19-75,)"
-    ordering="BEFORE"
+    ordering="AFTER"
     side="BOTH"
 [[dependencies.idf]]
     modId="legendarytooltips"
     mandatory = false
     versionRange="[1.3.1,)"
-    ordering="BEFORE"
+    ordering="AFTER"
     side="BOTH"
+[[dependencies.idf]]
+modId="tetra"
+mandatory=false
+versionRange="[5,]"
+ordering="AFTER"
+side="BOTH"
