--- a/build.gradle
+++ b/build.gradle
@@ -112,14 +112,14 @@ dependencies {
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-76")
 
     //LEGENDARY TOOLTIPS + DEPENDENCIES + EQUIPMENT COMPARE
-    implementation fg.deobf("curse.maven:iceberg-520110:4300529")
-    implementation fg.deobf("curse.maven:itemframes-532127:4278509")
-    implementation fg.deobf("curse.maven:prism-638111:3993293")
-    implementation fg.deobf("curse.maven:equipcompare-502561:4282005")
+    //implementation fg.deobf("curse.maven:iceberg-520110:4300529")
+    //implementation fg.deobf("curse.maven:itemframes-532127:4278509")
+    //implementation fg.deobf("curse.maven:prism-638111:3993293")
+    //implementation fg.deobf("curse.maven:equipcompare-502561:4282005")
 
     //TETRA
     implementation fg.deobf("curse.maven:mutil-351914:3941314")
-    implementation fg.deobf("curse.maven:tetra-289712:4370833")
+    implementation fg.deobf("curse.maven:tetra-289712:4487237")
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
