--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.2-43.2.3'
+    minecraft 'net.minecraftforge:forge:1.19.2-43.2.21'
 
     //STAPLES
     // compile against the JEI API but do not include it at runtime
@@ -116,10 +116,10 @@ dependencies {
     implementation fg.deobf("curse.maven:rubidium-574856:4568727")
 
     //LEGENDARY TOOLTIPS + DEPENDENCIES + EQUIPMENT COMPARE
-    //implementation fg.deobf("curse.maven:iceberg-520110:4300529")
-    //implementation fg.deobf("curse.maven:itemframes-532127:4278509")
-    //implementation fg.deobf("curse.maven:prism-638111:3993293")
-    //implementation fg.deobf("curse.maven:equipcompare-502561:4282005")
+    implementation fg.deobf("curse.maven:iceberg-520110:4300529")
+    implementation fg.deobf("curse.maven:itemframes-532127:4278509")
+    implementation fg.deobf("curse.maven:prism-638111:3993293")
+    implementation fg.deobf("curse.maven:equipcompare-502561:4282005")
 
     //TETRA
     implementation fg.deobf("curse.maven:mutil-351914:3941314")
