--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -38,7 +38,7 @@ side = "BOTH"
 modId = "legendarytooltips"
 mandatory = false
 versionRange = "[1.3.1,)"
-ordering = "AFTER"
+ordering = "BEFORE"
 side = "BOTH"
 [[dependencies.idf]]
 modId = "tetra"
