--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '0.0.1-1.19.2'
+version = '0.1.0-1.19.2'
 group = 'net.cwjn.idf' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'idf'
 
@@ -117,7 +117,7 @@ dependencies {
 
     //LEGENDARY TOOLTIPS + DEPENDENCIES + EQUIPMENT COMPARE
     implementation fg.deobf("curse.maven:iceberg-520110:4300529")
-    implementation fg.deobf("curse.maven:itemframes-532127:4278509")
+    //implementation fg.deobf("curse.maven:itemframes-532127:4278509")
     implementation fg.deobf("curse.maven:prism-638111:3993293")
     implementation fg.deobf("curse.maven:equipcompare-502561:4282005")
 
