--- a/build.gradle
+++ b/build.gradle
@@ -117,7 +117,7 @@ dependencies {
 
     //LEGENDARY TOOLTIPS + DEPENDENCIES + EQUIPMENT COMPARE
     implementation fg.deobf("curse.maven:iceberg-520110:4300529")
-    //implementation fg.deobf("curse.maven:itemframes-532127:4278509")
+    implementation fg.deobf("curse.maven:itemframes-532127:4278509")
     implementation fg.deobf("curse.maven:prism-638111:3993293")
     implementation fg.deobf("curse.maven:equipcompare-502561:4282005")
 
