--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,10 @@ dependencies {
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-76:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-76")
 
+    //naturalist (to test bestiary with other mods)
+    implementation fg.deobf("curse.maven:geckolib-388172:4407241")
+    implementation fg.deobf("curse.maven:naturalist-627986:4660377")
+
     //rubidium and oculus
     implementation fg.deobf("curse.maven:oculus-581495:4578731")
     implementation fg.deobf("curse.maven:rubidium-574856:4568727")
