--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -58,3 +58,9 @@ mandatory = false
 versionRange = "[1.19.2-2.0.2,)"
 ordering = "AFTER"
 side = "BOTH"
+[[dependencies.idf]]
+modId = "apotheosis"
+mandatory = false
+versionRange = "[6.4.1,)"
+ordering = "AFTER"
+side = "BOTH"
